# pelican-embed-kicad-kicanvas

./: .markdownlint.json  ARCHITECTURE.md  CHANGELOG.md  CONTRIBUTING.md  DEVELOPMENT.md  KICANVAS_VERSION  LICENSE  MANIFEST.in  Makefile  QUICKSTART.md  README.md  justfile  pelicanconf.py.example  pyproject.toml  pyrightconfig.json  setup.py
.github/workflows/: release.yml  test.yml
examples/: README.md  example-markdown.md  example-rst.rst
pelican_kicad_embed/: __about__.py  __init__.py  liquid_tag.py  md_ext.py  rst_directive.py
scripts/: check_kicanvas_version.py  lint.sh  typecheck.sh  update_kicanvas.sh
tests/: README.md  __init__.py  test_edge_cases.py  test_init.py  test_integration.py  test_jinja2_function.py  test_jinja2_integration.py  test_jinja2content_integration.py  test_liquid_tag.py  test_md_ext.py  test_rst_directive.py
